<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".login_form"
    tools:ignore="ContentDescription">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="30dp"
            android:src="@drawable/account2" />


        <EditText

            android:id="@+id/txt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="@string/User_Name"
            android:ems="10"
            android:hint="@string/User_Name"
            android:inputType="text"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="italic"
            tools:ignore="TextFields" />

        <EditText

            android:id="@+id/txt_passward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="@string/Password"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="italic" />
        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_rounded"
            android:text="@string/Login"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_rounded"
            android:text="@string/Register"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>



</ScrollView>